[Home]

Summary:ASTERISK-30107: iostream: Build failure with libressl
Reporter:Fabrice Fontaine (ffontaine)Labels:patch
Date Opened:2022-06-12 11:26:40Date Closed:2023-03-06 11:24:43.000-0600
Priority:MinorRegression?
Status:Closed/CompleteComponents:Core/General
Versions:16.25.2 Frequency of
Occurrence
Constant
Related
Issues:
Environment:buildrootAttachments:( 0) 0006-main-iostream.c-fix-build-with-libressl.patch
Description:The following build failure is raised with libressl, it can be fixed by using SSL_is_server which is available since version 2.7.0 and
https://github.com/libressl-portable/openbsd/commit/d7ec516916c5eaac29b02d7a8ac6570f63b458f7:

iostream.c: In function 'ast_iostream_close':
iostream.c:559:41: error: invalid use of incomplete typedef 'SSL' {aka 'struct ssl_st'}
 559 |                         if (!stream->ssl->server) {
     |                                         ^~


Full build log:
- http://autobuild.buildroot.org/results/ce4d62d00bb77ba5b303cacf6be7e350581a62f9
Comments:By: Asterisk Team (asteriskteam) 2022-06-12 11:26:41.359-0500

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur.

Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/].

By: Joshua C. Colp (jcolp) 2022-06-12 15:24:22.145-0500

Will you be putting this up on Gerrit for inclusion?

By: Fabrice Fontaine (ffontaine) 2022-06-12 16:09:11.120-0500

I'm really not used to gerrit, I got the following error when trying to install commit-msg hook:

git review -s
Creating a git remote called 'gerrit' that maps to:
       ssh://ffontaine@gerrit.asterisk.org:29418/asterisk.git
Problems encountered installing commit-msg hook
The following command failed with exit code 255
   "scp -P29418 ffontaine@gerrit.asterisk.org:hooks/commit-msg .git/hooks/commit-msg"
-----------------------
subsystem request failed on channel 0
scp: Connection closed
-----------------------

By: Joshua C. Colp (jcolp) 2022-06-12 17:49:49.164-0500

Have you set up an account with a username, and also added your SSH key?

By: Fabrice Fontaine (ffontaine) 2022-06-13 07:21:16.816-0500

Yes, I have an account and a SSH key (I was able to clone the repository through SSH). I'll try to investigate further in the coming days.

By: George Joseph (gjoseph) 2022-07-11 06:13:20.284-0500

Were you ever able to get the commit hook to install?
Have you tried using git-review?  You can install it with {{pip install git-review}}.  It makes things a bit easier since you can just do a {{git review -s}} to install the hook.


By: Asterisk Team (asteriskteam) 2022-07-25 12:00:30.743-0500

Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1].

[1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines

By: Fabrice Fontaine (ffontaine) 2023-02-25 04:32:50.976-0600

I was finally able to push the update through gerrit

By: Asterisk Team (asteriskteam) 2023-02-25 04:32:51.889-0600

This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable.

By: Friendly Automation (friendly-automation) 2023-03-06 11:24:44.859-0600

Change 19947 merged by Friendly Automation:
main/iostream.c: fix build with libressl

[https://gerrit.asterisk.org/c/asterisk/+/19947|https://gerrit.asterisk.org/c/asterisk/+/19947]

By: Friendly Automation (friendly-automation) 2023-03-06 11:25:34.938-0600

Change 19949 merged by Friendly Automation:
main/iostream.c: fix build with libressl

[https://gerrit.asterisk.org/c/asterisk/+/19949|https://gerrit.asterisk.org/c/asterisk/+/19949]

By: Friendly Automation (friendly-automation) 2023-03-06 12:15:46.130-0600

Change 19948 merged by Joshua Colp:
main/iostream.c: fix build with libressl

[https://gerrit.asterisk.org/c/asterisk/+/19948|https://gerrit.asterisk.org/c/asterisk/+/19948]